--- a/audit/templates/base.html
+++ b/audit/templates/base.html
@@ -57,7 +57,7 @@
                         {% get_language_info_list for LANGUAGES as languages %}
                         {% for language in languages %}
                             <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
-                                {{ language.name_translated }}
+                                {{ language.name_local|title }}
                             </option>
                         {% endfor %}
                     </select>
