modified how to link

--- a/audit/templates/admin/login.html
+++ b/audit/templates/admin/login.html
@@ -74,7 +74,7 @@
             <td><a target="_blank" href="https://gdpr.pluribus-one.it/{{LANGUAGE_CODE}}"><img src="{% static 'img/pluribus-one.svg' %}" width="150px" /></a></td>
         </tr>
         <tr>
-            <td colspan="2"><a target="_blank" href="{% url 'home' %}">{% trans 'Documentation' %}</a></td>
+            <td colspan="2"><a target="_blank" href="{% url 'data_audit' %}">{% trans 'HOW TO WORK' %}</a></td>
         </tr>
     </table>
   </div>
