--- a/audit/templates/dashboard.html
+++ b/audit/templates/dashboard.html
@@ -5,7 +5,7 @@
 <h1>{% trans 'Dashboard' %}</h1>
 <div class="card">
     <div class="card-body">
-        {% trans 'The GDPR Registry App provides a complete dashboard based on the django Jet framework (https://github.com/geex-arts/django-jet), with the following information:' %}
+        {% trans 'The GDPR Registry Web App provides a complete dashboard based on the django Jet framework (https://github.com/geex-arts/django-jet), with the following information:' %}
         <ul>
             <li><strong>{% trans 'Registry Status' %}</strong>: {% trans 'it describes, both graphically (pie diagram) and textually suggestions, errors, issues related to your GDPR registry. Just follow the suggestions displayed in this widget to fill in the registry.' %}</li>
             <li><strong>{% trans 'Quick Links' %}</strong>: {% trans 'quick links to application home, change password and logout' %}</li>
