--- a/audit/templates/home.html
+++ b/audit/templates/home.html
@@ -11,10 +11,10 @@
                 {% endwith %}
             </div>
             <div class="col-md-8">
-                <h1 class="card-title">{% trans 'GDPR Registry App' %}</h1>
-                <p class="lead">{% trans 'Welcome to the GDPR Registry App, developed by Pluribus One' %}
+                <h1 class="card-title">{% trans 'GDPR Registry Web App' %}</h1>
+                <p class="lead">{% trans 'Welcome to the GDPR Registry Web App, developed by Pluribus One' %}
                     <a href="{% url 'license' %}">{% trans 'under open-source license' %} (*)</a>.
-                    <p class="lead">{% trans 'The GDPR Registry App can be used to annotate and keep track of all your data processing activities, according to a sound framework' %},
+                    <p class="lead">{% trans 'The GDPR Registry Web App can be used to annotate and keep track of all your data processing activities, according to a sound framework' %},
                 {% trans 'and produce high-quality, updated reports in PDF format. This is a key step towards an enhanced security posture, and to satisfy GDPR requirements.' %}
                 <div class="row">
                     <div class="col-sm">
