--- a/audit/templates/key_features.html
+++ b/audit/templates/key_features.html
@@ -2,7 +2,7 @@
 {% load i18n static %}
 
 {% block content %}
-<h1>{% trans "GDPR Registry App" %}</h1>
+<h1>{% trans "GDPR Registry Web App" %}</h1>
 <p>{% blocktrans %}To manage the whole GDPR process, you need a central point
 where information about GDPR procedures are stored and can be updated
 on a regular basis by dedicated personnel, including your Data Protection Officer.
@@ -13,7 +13,7 @@ It can also demonstrate that GDPR is a continuous process that has become an int
 This is a key step towards an enhanced security posture.
 {% endblocktrans %}
 </p>
-<p>{% blocktrans %}The Pluribus One GDPR Registry app allows you to keep track of all data processing
+<p>{% blocktrans %}The Pluribus One GDPR Registry Web app allows you to keep track of all data processing
     activities according to a hierarchical structure and the various GDPR stages highlighted in this document.{% endblocktrans %}</p>
 
 <h2>{% trans "Key Features" %}</h2>
