--- a/audit/templates/license.html
+++ b/audit/templates/license.html
@@ -2,7 +2,7 @@
 {% load i18n static %}
 
 {% block content %}
-<h1>{% trans 'GDPR Registry App License' %}</h1>
+<h1>{% trans 'GDPR Registry Web App License' %}</h1>
 
 {% blocktrans %}
 <p>Last update: June 15, 2018.</p>
