--- a/audit/templates/license.html
+++ b/audit/templates/license.html
@@ -4,12 +4,12 @@
 {% block content %}
 <h1>{% trans 'GDPR Registry Web App License' %}</h1>
 
-{% blocktrans %}
-<p>Last update: June 15, 2018.</p>
-{% endblocktrans %}
+<p>{% blocktrans %}
+Last update: November 26, 2020.
+{% endblocktrans %}</p>
 
 <div class="card">
-    <h5 class="card-header">Copyright (c) 2018 - Igino Corona, Pluribus One SRL</h5>
+    <h5 class="card-header">Copyright (c) 2020 - Igino Corona, Pluribus One SRL</h5>
     <div class="card-body">
         {% blocktrans %}
         <p>
