--- a/audit/templates/breach_response.html
+++ b/audit/templates/breach_response.html
@@ -36,7 +36,7 @@
     <div class="card-body">
         <p>{% blocktrans %}In the edit page of the data audit, just click on the add (+) icon for the field "incident response plan".
             Then, you can insert all details about the incident response plan. In this case, incident response is
-            helped by <a href="www.attack-prophecy.it">Attack Prophecy</a>, thanks to its virtual patching mechanism that also covers zero-day (never-before-seen)
+            helped by <a href="https://www.pluribus-one.it/it/prodotti/web-application-security">Pluribus One WAS</a>, thanks to its virtual patching mechanism that also covers zero-day (never-before-seen)
             attacks that may lead to data breaches.
             {% endblocktrans %}
         </p>
@@ -44,7 +44,7 @@
             you should specify:
             <ul>
                 <li><strong>How breach response is possible</strong>: how data breaches can be effectively handled.
-                    This phase usually prefigures a well-suited recovery plan, and systems such as Attack Prophecy, capable to provide protection against <em>unexpected</em> behavior of your applications and users.</li>
+                    This phase usually prefigures a well-suited recovery plan, and systems such as Pluribus One WAS, capable to provide protection against <em>unexpected</em> behavior of your applications and users.</li>
                 <li><strong>Data Breach Notification</strong>: notification procedures to the involved parties, including supervisory authorities.</li>
                 <li><strong>Residual risk (of inadequate/missing response to data breaches)</strong>: that
             is, an evaluation of the residual risk of <em>not responding properly</em> to data breaches given the specific incident response plan.
@@ -54,7 +54,7 @@
         {% endblocktrans %}
         </p>
         <div class="alert alert-info" role="alert">
-            {% blocktrans %}In this example, we create an incident response plan that employs <strong>Attack Prophecy</strong> to create
+            {% blocktrans %}In this example, we create an incident response plan that employs <strong>Pluribus One WAS</strong> to create
             virtual patches if intrusive events are detected.
             Additionaly, an (encrypted) backup of Virtual Machines and Data is used for recovery/investigation purposes.
 
