--- a/audit/templates/breach_detection.html
+++ b/audit/templates/breach_detection.html
@@ -35,14 +35,14 @@
     <div class="card-body">
         <p>{% blocktrans %}In the edit page of the data audit, just click on the add (+) icon for the field "data breach detection".
             Then, you can insert all details about the data breach detection technique. In this case, data breach detection is
-            handled by <a href="www.attack-prophecy.it">Attack Prophecy</a>, an advanced software by Pluribus One for the detection of attacks against web services.
+            handled by <a href="https://www.pluribus-one.it/it/prodotti/web-application-security">Pluribus One WAS</a>, an advanced software by Pluribus One for the detection of attacks against web services.
         {% endblocktrans %}
         </p>
         <p>{% blocktrans %}Please note that in general, for each data breach detection technique,
             you should specify:
             <ul>
                 <li><strong>How breach detection is possible</strong>: how unexpected data breaches can be detected.
-                    This phase usually requires sophisticated systems such as Attack Prophecy, capable to detect <em>unexpected</em> behavior of your applications and users.</li>
+                    This phase usually requires sophisticated systems such as Pluribus One WAS, capable to detect <em>unexpected</em> behavior of your applications and users.</li>
                 <li><strong>Residual risk (of missing data breaches)</strong>: a residual risk for the data breach detection, that
             is, an evaluation of the residual risk of <em>missing</em> data breaches given the detection technique that has been put in place.
             This should be the output of a detailed risk analysis that evaluates likelihood and impact of undetected data breaches for the considered data audit
@@ -51,7 +51,7 @@
         {% endblocktrans %}
         </p>
         <div class="alert alert-info" role="alert">
-            {% trans "In this example, we create a data breach detection <strong>Attack Prophecy</strong> and associate it to the Data Audit <strong>Identity Documents</strong>" %}.
+            {% trans "In this example, we create a data breach detection <strong>Pluribus One WAS</strong> and associate it to the Data Audit <strong>Identity Documents</strong>" %}.
             {% trans 'Please note that many other data audits can be associated with the same data breach detection tool, e.g., if the tool protects other applications that handle different data.' %}
         </div>
     </div>
